# child-lab-framework

./: .gitattributes  .gitignore  .gitmodules  README.md  _typos.toml  check_types.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
child_lab_framework/: __init__.py  __main__.py  demo.py  demo2.py  demo_reprojection.py  demo_sequential.py  hello.py  process_hell.py  util.py  utils.py
child_lab_framework/_cli/: cli.py
child_lab_framework/_parallel_execution/: compilation.py  flow.py
child_lab_framework/_procedure/: __init__.py  calibrate.py  demo.py  demo_sequential.py  estimate_transformations.py
child_lab_framework/core/: algebra.py  calibration.py  dumping.py  file.py  geometry.py  hardware.py  image.py  probability.py  sequence.py  serialization.py  stream.py  transform_buffer.py  video.py  workspace.py
child_lab_framework/core/config/: transform_buffer.py
child_lab_framework/core/detection/: arudice.py  chessboard.py  marker.py
child_lab_framework/core/flow/: __init__.py  compilation.py  flow.py
child_lab_framework/core/transformation/: __init__.py  buffer.py  error.py  interface.py  transformation.py
child_lab_framework/docker/: __init__.py  build.py  client.py  run.py
child_lab_framework/experiments/: decorators.py  parallel_models.py
child_lab_framework/interface/: __init__.py  test_widget.py
child_lab_framework/interfaces/: __init__.py  test_widget.py
child_lab_framework/logging/: logger.py
child_lab_framework/postprocessing/: __init__.py  approximation.py  imputation.py  interface.py  interpolation.py  unification.py
child_lab_framework/procedure/: calibrate.py  create_tf_buffer.py  demo.py  demo_sequential.py
child_lab_framework/task/attention/: __init__.py  geometric.py
child_lab_framework/task/camera/: marker_detection.py
child_lab_framework/task/camera/detection/: arudice.py  chessboard.py  marker.py
child_lab_framework/task/camera/transformation/: __init__.py  heuristic.py  transformation.py
child_lab_framework/task/camera/transformation/arudice/: arudice.py  model.py
child_lab_framework/task/camera/transformation/heuristic/: __init__.py  box_kabsch.py  heuristic.py  kabsch.py  projection.py  shoulders.py
child_lab_framework/task/camera/transformation/wip/: aruco.py  calibrate.py  depth.py  idea.md  input.py  input_example.yaml  pointcloud.py  transform.py  transform_buffer.py
child_lab_framework/task/depth/: __init__.py  depth.py
child_lab_framework/task/dumping/: __init__.py  dumping.py
child_lab_framework/task/emotion/: __init__.py  emotion.py
child_lab_framework/task/emotions/: __init__.py  emotions.py
child_lab_framework/task/emotions/wip/: wip.py
child_lab_framework/task/face/: __init__.py  detection.py  face.py  keypoints.py  mtcnn.py
child_lab_framework/task/gaze/: __init__.py  ceiling_baseline.py  ceiling_head_baseline.py  ceiling_projection.py  gaze.py  side_correction.py
child_lab_framework/task/gaze/baseline/: __init__.py  head.py  keypoint.py
child_lab_framework/task/gaze/mini_face/: __init__.py  mini_face.py  typing.py
child_lab_framework/task/joint_attention/: __init__.py  probabilistic.py
child_lab_framework/task/pointcloud/: pointcloud.py
child_lab_framework/task/pose/: __init__.py  duplication.py  pose.py
child_lab_framework/task/social_distance/: __init__.py  social_distance.py
child_lab_framework/task/social_proximity/: __init__.py
child_lab_framework/task/visualization/: __init__.py  annotation.py  configuration.py  visualization.py
child_lab_framework/typing/: array.py  flow.py  stream.py  transformation.py  video.py
development/: .gitignore
development/scripts/: oak_devices.py
model/: metric3d-vit-small.onnx  yolov8x-pose-p6.onnx  yolov8x-pose-p6.pt
spin/: development.py
src/: main.py
tool/: copy_data_from_repository.py  cut_video.py  select_frame.py
ulep/: ulep.py
