[project]
name = "child-lab-framework"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

authors = [
    { name = "Jan Smółka", email = "jp.smolka@gmail.com" },
    { name = "Igor Urbanik", email = "igorurbanik23@gmail.com" },
]

description = "UJ ChildLab Computer Vision project"
readme = "README.md"

dependencies = [
    "opencv-python>=4.10.0.84",
    "ultralytics>=8.2.72",
    "colorama>=0.4.6",
    "networkx~=3.3",
    "scipy>=1.14.1",
    "pandas>=2.2.2",
    "mini-face>=0.1.3",
    "depth-pro>=0.1.0",
    "click>=8.1.7",
    "more-itertools>=10.5.0",
    "kornia>=0.7.4",
    "types-tqdm>=4.67.0.20241221",
    "types-networkx>=3.4.2.20241227",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "ruff>=0.6.8",
    "mypy>=1.11.2",
    "pytest>=8.3.4",
    "syrupy>=4.8.1",
    "pytest-benchmark>=5.1.0",
    "hypothesis>=6.129.3",
    "basedpyright>=1.28.4",
]

workspace = [
    "child-lab-annotation",
    "child-lab-cli",
    "child-lab-data",
    "child-lab-framework",
    "child-lab-procedures",
    "child-lab-visualization",
    "depth-estimation",
    "marker-detection",
    "transformation-buffer",
    "video-io",
    "vpc",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
compile-bytecode = false
default-groups = ["dev", "workspace"]

[tool.uv.sources]
depth-pro = { git = "https://github.com/child-lab-uj/depth-pro.git" }
child-lab-annotation = { workspace = true }
child-lab-cli = { workspace = true }
child-lab-data = { workspace = true }
child-lab-framework = { workspace = true }
child-lab-procedures = { workspace = true }
child-lab-visualization = { workspace = true }
depth-estimation = { workspace = true }
marker-detection = { workspace = true }
transformation-buffer = { workspace = true }
video-io = { workspace = true }
vpc = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["child_lab_framework"]

[tool.hatch.build.targets.wheel]
include = ["child_lab_framework"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".venv", "child_lab_framework/experiments"]
line-length = 90

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = ["F722"] # Makes using jaxtyping possible

[tool.mypy]
exclude = [".venv"]
incremental = true
strict = true
allow_untyped_globals = false
disallow_any_expr = false
disallow_any_explicit = false
disallow_any_decorated = false
disallow_any_generics = false   # This option makes using jaxtyping with numpy problematic
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
follow_untyped_imports = true

[tool.mypy-networkx]
ignore_missing_imports = true
