[project]
name = "child-lab-framework"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

authors = [{ name = "Jan Smółka", email = "jp.smolka@gmail.com" }]

description = "A toolkit for analyzing pose, gaze and social dynamics in multi-camera environments"
readme = "README.md"

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "ruff>=0.6.8",
    "mypy>=1.11.2",
    "pytest>=8.3.4",
    "syrupy>=4.8.1",
    "pytest-benchmark>=5.1.0",
    "hypothesis>=6.129.3",
    "basedpyright>=1.28.4",
]

workspace = [
    "child-lab-annotation",
    "child-lab-cli",
    "child-lab-data",
    "child-lab-framework",
    "child-lab-procedures",
    "child-lab-visualization",
    "depth-estimation",
    "marker-detection",
    "transformation-buffer",
    "video-io",
    "vpc",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
compile-bytecode = false
default-groups = ["dev", "workspace"]

[tool.uv.sources]
child-lab-annotation = { workspace = true }
child-lab-cli = { workspace = true }
child-lab-data = { workspace = true }
child-lab-framework = { workspace = true }
child-lab-procedures = { workspace = true }
child-lab-visualization = { workspace = true }
depth-estimation = { workspace = true }
marker-detection = { workspace = true }
transformation-buffer = { workspace = true }
video-io = { workspace = true }
vpc = { workspace = true }

[tool.ruff]
exclude = [".venv"]
line-length = 90

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = ["F722"] # Makes using jaxtyping possible

[tool.mypy]
exclude = [".venv"]
incremental = true
strict = true
allow_untyped_globals = false
disallow_any_expr = false
disallow_any_explicit = false
disallow_any_decorated = false
disallow_any_generics = false   # This option makes using jaxtyping with numpy problematic
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
follow_untyped_imports = true
